--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+.logo{
+  height: auto;
+  width: 400px;
+  object-fit: cover;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.landing p{
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 300;
+  line-height: 90%;
+  font-stretch: 50%;
+  color: rgba(255,255,255,0.7);
+ 
+}
+.landing h2{
+  font-size: 100px;
+  color: #ffff;
+  max-height: 100px;
+  font-weight: 800;
+  line-height: 80%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.smallsections{
+  transform: translate(50%,0%);
+  background-color: transparent;
 }
+.smallsections2{
+  transform: translate(-50%,0%);
+  background-color: transparent;
+}
+canvas{
+  height: 100vh !important;
+} 
